<resources>
    <plurals name="age_plural">
        <item quantity="few">Age: %d years</item>
        <item quantity="other">Age: %d year</item>
    </plurals>

    <string name="app_name">KrakGO</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="forget_password_label">Forgot password</string>
    <string name="log_in_label">Log in</string>
    <string name="register_label">Register</string>
    <string name="dont_have_account_label">Dont\'t have an account</string>
    <string name="repeat_password_label">"Retype password "</string>
    <string name="dont_have_account_sign_label">Don\'t have an account? Register here</string>
    <string name="next_label">Next</string>
    <string name="login_succesfull">Login successfully</string>
    <string name="login_error">Login error</string>
    <string name="error_password_too_short">6 characters minimum</string>
    <string name="error_max_characters_placeholder">%d characters maximum</string>
    <string name="error_minimum_character_placeholder">%d characters minimum</string>
    <string name="password_field_error">Password must contain one capital letter and number</string>
    <string name="error_email_field">Bad formatted email address</string>
    <string name="error_default">Error</string>
    <string name="error_fields_empty_or_invalid">Some fileds are empty or invalid</string>
    <string name="remeber_me">Remember me</string>
    <string name="name_label">Name</string>
    <string name="surname_label">Surname</string>
    <string name="dob_label">Date of birth</string>
    <string name="above_18_label">I am more than 18 years old</string>
    <string name="terms_of_condition">Terms and condition</string>
    <string name="terms_accepted_checkbox_label">I have read and accept the terms and condition</string>
    <string name="password_dont_match">Passwords don\'t match</string>
    <string name="you_have_to_be_above_18">You have to be above 18 y.o. to create an account</string>
    <string name="you_have_to_accept_terms">You have to accept terms and condition</string>
    <string name="error_gallery_request">You must allow application to access gallery before continuing</string>
    <string name="error_no_avatar">You have to pick your avatar before continuing</string>
    <string name="account_created">Account created</string>
    <string name="avatar_label">Avatar</string>
    <string name="reset_password_label">Enter your email address, on which link to retrieve password will be send</string>
    <string name="reset_password_button">Reset password</string>
    <string name="password_change_success">Email with link to retrieve your password has ben send</string>
    <string name="press_back_again_to_exit">Press back once again to exit app</string>
    <string name="about_me">About me</string>
    <string name="auto_login_error">Automatic login error</string>
    <string name="log_out_label">Log out</string>
    <string name="save_label">Save</string>
    <string name="map_status_visible">Visible</string>
    <string name="map_status_invisible">Invisible</string>
    <string name="map_status_inviting">Want to meet</string>
    <string name="error_dob_not_picked">To continue you have to enter your date of birth</string>
    <string name="user_details_saved">User details saved successfully</string>
    <string name="recent">Recent</string>
    <string name="map">Map</string>
    <string name="messages">Chat</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="map_visibility_label">Map visibility</string>
    <string name="photo_change_succesfull">Photo change success</string>
    <string name="write_message">Send a message</string>
    <string name="forum_message_send">message has been sent</string>
    <string name="send_message">Send message</string>
    <string name="error_message_empty">Message cannot be empty</string>
    <string name="error_location_not_granted">Application have to be able to track location</string>
    <string name="opinions_label">Live opinions</string>
    <string name="tab_forum">Forum</string>
    <string name="error_placeholder">Error</string>
</resources>