<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_forum"
        android:enabled="true"
        android:icon="@drawable/ic_recent"
        android:title="@string/recent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_messages"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/messages"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>