<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="@dimen/login_logo_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email_input_layout"
            android:layout_width="@dimen/input_text_medium_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:theme="@style/TextLabel"
            app:errorTextAppearance="@style/TextInputError"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image_view">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                android:textColor="@color/colorWhite" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_input_layout"
            android:layout_width="@dimen/input_text_medium_width"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorTextAppearance="@style/TextInputError"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password_label"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintLeft_toLeftOf="@+id/login_password_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/login_password_input_layout" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/remeber_me"
            android:textColor="@color/colorWhite"
            android:theme="@style/WhiteCheckbox"
            app:layout_constraintLeft_toLeftOf="@+id/forgot_password_text_view"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_text_view" />

        <FrameLayout
            android:id="@+id/login_button"
            style="@style/RoundButton"
            android:layout_width="@dimen/medium_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_remember_me">

            <TextView
                style="@style/ButtonTransparentText"
                android:text="@string/log_in_label" />

            <ProgressBar
                android:id="@+id/progress_bar_login"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center|right"
                android:visibility="gone" />

        </FrameLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>

